WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138988
Web Inspector: DOMExceptions do not show the error message string in Pause Reason section
https://bugs.webkit.org/show_bug.cgi?id=138988
Summary
Web Inspector: DOMExceptions do not show the error message string in Pause Re...
Joseph Pecoraro
Reported
2014-11-21 15:29:02 PST
* SUMMARY DOMExceptions do not show the error message string in Pause Reason section. * STEPS TO REPRODUCE 1. Inspect nytimes.com 2. Enable pause on all exceptions 3. Reload => When pausing due to a DOMException the message is just "DOMException" => Expected something better, like: "Error: SyntaxError: DOM Exception 12"
Attachments
[PATCH] Proposed Fix
(3.32 KB, patch)
2014-11-21 15:31 PST
,
Joseph Pecoraro
timothy
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-11-21 15:29:34 PST
<
rdar://problem/19064068
>
Joseph Pecoraro
Comment 2
2014-11-21 15:31:57 PST
Created
attachment 242084
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 3
2014-11-26 08:56:48 PST
Comment on
attachment 242084
[details]
[PATCH] Proposed Fix Rejecting
attachment 242084
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 242084, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: t.org/repository/webkit/trunk ... Authentication realm: <
http://svn.webkit.org:80
> Mac OS Forge Password for '
commit-queue@webkit.org
': Authentication realm: <
http://svn.webkit.org:80
> Mac OS Forge Username: Use of uninitialized value $username in chomp at /usr/share/git-core/perl/Git/SVN/Prompt.pm line 114. error: git-svn died of signal 11 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 139 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output:
http://webkit-queues.appspot.com/results/6545376169426944
Joseph Pecoraro
Comment 4
2014-12-01 11:11:09 PST
http://trac.webkit.org/changeset/176595
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug