Web Inspector: DOMExceptions do not show the error message string in Pause Reason section https://bugs.webkit.org/show_bug.cgi?id=138988

Reviewed by Timothy Hatcher.

Source/WebCore:

* inspector/WebInjectedScriptHost.cpp:
(WebCore::WebInjectedScriptHost::type):
Give all DOM Exception types the "error" RemoteObject subtype.

LayoutTests:

* inspector/debugger/command-line-api-exception-expected.txt:

Canonical link: https://commits.webkit.org/156974@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176595 268f45cc-cd09-0410-ab3c-d52691b4dbfc